@@ -1,0 +1,36 @@
+-depkeyhead=cimgui:cimgui.h
+{IMGUI_DOCKING}-depincpathlocal=cimgui:../../../cimgui-docking
+{IMGUI_CUSTOM}-depincpathlocal=cimgui:../../../cimgui-custom
+{IMGUI_TUI}-depincpathlocal=cimgui:../../../cimgui-tui
+-depincpathlocal=cimgui:../../../cimgui
+
+-depkeyhead=imgui:imgui.h
+{IMGUI_DOCKING}-depincpathlocal=imgui:../../../cimgui-docking/imgui
+{IMGUI_CUSTOM}-depincpathlocal=imgui:../../../cimgui-custom/imgui
+{IMGUI_TUI}-depincpathlocal=imgui:../../../cimgui-tui/imgui
+-depincpathlocal=imgui:../../../cimgui/imgui
+
+-depkeyhead=sokol:sokol_imgui.h
+-depincpathlocal=sokol:../../../sokol
+
+hbdemo.prg
+hbmain.cpp
+#{abstr}../sigalt.c
+
+../../zepeditor.hbc
+../../../zeputils/zeputils.hbc
+{!IMGUI_DOCKING}../../../cimgui/cimgui.hbc
+{IMGUI_DOCKING}../../../cimgui-docking/cimgui.hbc
+../../../sokol/sokol.hbc
+hbct.hbc
+
+{gcc|mingw|mingw64}-lstdc++
+{gcc|mingw|mingw64}-lstdc++fs
+
+{gcc|mingw|mingw64}-cflag=-std=c++17
+
+{win}-fullstatic
+
+{win}-gtgui
+
+-gui
